--- a/blog/templates/blog/add_reply_form.html
+++ b/blog/templates/blog/add_reply_form.html
@@ -30,7 +30,7 @@
           <div class="d-flex flex-column w-100">
             <h4 class="fw-700 text-grey-900 font-xsss">
               <a class="text-dark" 
-                href="{% url 'external-user-profile' post.owner.username %}">
+                href="{% url 'user-profile' post.owner.username %}">
                 {{comment.user.username}}
               </a>
               <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
