--- a/blog/templates/blog/profile_followers_list.html
+++ b/blog/templates/blog/profile_followers_list.html
@@ -2,6 +2,6 @@
 {% block content %}
 <h2><strong>{{user.username}}'s Followers:</strong></h2>
 {% for follower in followers %}
-  <a href="{% url 'external-user-profile' follower %}">{{follower}}</a>
+  <a href="{% url 'user-profile' follower %}">{{follower}}</a>
 {% endfor %}
 {% endblock %}
