--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -7,7 +7,7 @@
 <!-- MODAL -->
 {% include 'blog/modal_delete.html' %}
 <!-- ENDMODAL -->
-<div class="container mt-3Z">
+<div class="container mt-3">
 <!-- POST -->
   <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
     <div class="card-body p-0 d-flex">
@@ -25,7 +25,7 @@
         {% endif %}
       </figure>
       <h4 class="fw-700 text-grey-900 font-xsss mt-1">
-        <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
+        <a class="text-dark" href="{% url 'user-profile' post.owner.username %}">
           {{post.owner}}
         </a>
         <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500 text-nowrap">
@@ -67,7 +67,7 @@
     {% endif %}
     
     <div id="descriptionContainer" class="card-body p-0 me-lg-5">
-      <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
+      <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
     </div>
     
     <div class="card-body d-flex p-0 align-items-center">
@@ -94,7 +94,7 @@
       </a>
       <a type="button"
         class="btn p-1 me-2 rounded-circle bg-greylight shadow-sm border-0"
-        href="{% url 'dashboard' %}">
+        href="{% url 'user-profile' request.user %}">
         <i class="bi bi-person-fill"></i>
       </a>
       <h2 class="m-0">Comments</h2>
@@ -127,7 +127,7 @@
               <div class="d-flex flex-column w-100">
                 <h4 class="fw-700 text-grey-900 font-xsss">
                   <a class="text-dark" 
-                    href="{% url 'external-user-profile' post.owner.username %}">
+                    href="{% url 'user-profile' post.owner.username %}">
                     {{comment.user.username}}
                   </a>
                   <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
@@ -198,7 +198,7 @@
                     <div class="d-flex flex-column w-100">
                       <h4 class="fw-700 text-grey-900 font-xsss">
                         <a 
-                          href="{% url 'external-user-profile' reply.user %}"
+                          href="{% url 'user-profile' reply.user %}"
                           class="text-dark">
                           {{reply.user.username}}
                         </a>
