--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -4,7 +4,7 @@
 <!-- POST UPDATE -->
 {% include 'blog/post_update_form.html' %}
 <!-- END POST UPDATE -->
-<!-- MODAL -->
+<!-- DELETE MODAL -->
 {% include 'blog/modal_delete.html' %}
 <!-- ENDMODAL -->
 <div class="container mt-3">
