--- a/blog/templates/blog/search_profile.html
+++ b/blog/templates/blog/search_profile.html
@@ -22,7 +22,7 @@
                                 class="shadow-sm rounded-circle img-60 mr-3"
                                 alt="{{ user.username }}">
                             {% endif %}
-                            <div class="ml-3-c fw-700 font-xssss">
+                            <div class="ms-3 fw-700 font-xssss">
                                 <span class="font-xss">{{ profile }}</span>
                                 <span class="d-block font-xssss text-grey-500">
                                     {{ profile.user.first_name }} {{ profile.user.last_name}}
