--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -38,7 +38,7 @@
                                                     for="id_new_password1">New Password</label>
                                                 <input type="password" name="new_password1" 
                                                     autocomplete="new-password" 
-                                                    class="form-control form-control-margin" 
+                                                    class="form-control mb-2" 
                                                     required id="id_new_password1" 
                                                     placeholder="Enter password"/>
                                                 <span>
@@ -54,7 +54,7 @@
                                                 <input type="password" name="new_password2"
                                                     autocomplete="new-password" 
                                                     required id="id_new_password2" 
-                                                    class="form-control form-control-margin"
+                                                    class="form-control mb-2"
                                                     placeholder="Confirm password"/>
                                             </div>
                                         </div>
