--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -36,75 +36,87 @@
       </div>
     </form>
   </div>
-  
-  {% for post in posts %}
-  <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
-    <div class="card-body p-0 d-flex">
-      <figure class="avatar me-3">
-        {% if post.owner.profile.profile_picture %}
-          <img src="{{ post.owner.profile.profile_picture.url }}"
-            class="shadow-sm rounded-circle img-45"
-            alt="{{ user.username }} Profile Picture" 
-            width="26" height="26">
-        {% else %}
-          <img src="{% static 'blog/default.jpg' %}"
-            class="shadow-sm rounded-circle img-45"
-            alt="{{ user.username }}" 
-            width="26px" height="26px">
-        {% endif %}
-      </figure>
-      <h4 class="fw-700 text-grey-900 font-xsss mt-1">
-        <a class="text-dark" href="{% url 'user-profile' post.owner.username %}">
-          {{post.owner}}
-        </a>
-        <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500">
-          {{ post.posted_date|timesince }} ago
-        </span>
-      </h4>
-    </div>
 
-    {% if post.img %}
-      <div class="card-body p-0 mb-3 rounded-3 overflow-hidden">
-        <img src="{{post.img.url}}" 
-          alt="{{post.owner}}" 
-          class="float-right w-100" 
-          style="max-height:700px;">
-      </div>
-    {% endif %}
+  {% if posts %}
+  
+    {% for post in posts %}
+      <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
+        <div class="card-body p-0 d-flex">
+          <figure class="avatar me-3">
+            {% if post.owner.profile.profile_picture %}
+              <img src="{{ post.owner.profile.profile_picture.url }}"
+                class="shadow-sm rounded-circle img-45"
+                alt="{{ user.username }} Profile Picture" 
+                width="26" height="26">
+            {% else %}
+              <img src="{% static 'blog/default.jpg' %}"
+                class="shadow-sm rounded-circle img-45"
+                alt="{{ user.username }}" 
+                width="26px" height="26px">
+            {% endif %}
+          </figure>
+          <h4 class="fw-700 text-grey-900 font-xsss mt-1">
+            <a class="text-dark" href="{% url 'user-profile' post.owner.username %}">
+              {{post.owner}}
+            </a>
+            <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500">
+              {{ post.posted_date|timesince }} ago
+            </span>
+          </h4>
+        </div>
     
-    <div class="card-body p-0 me-lg-5 d-flex flex-column">
-      <div class="see-more-container">
-        <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
-        <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
-        <!--  -->
+        {% if post.img %}
+          <div class="card-body p-0 mb-3 rounded-3 overflow-hidden">
+            <img src="{{post.img.url}}" 
+              alt="{{post.owner}}" 
+              class="float-right w-100" 
+              style="max-height:700px;">
+          </div>
+        {% endif %}
+        
+        <div class="card-body p-0 me-lg-5 d-flex flex-column">
+          <div class="see-more-container">
+            <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
+            <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
+            <!--  -->
+          </div>
+          <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
+            Show More
+          </span>
+        </div>
+        
+        <div class="card-body d-flex p-0">
+          <a href="{% url 'post-like' post.pk%}" class="d-flex align-items-center fw-600 
+            text-grey-900 lh-26 font-xssss me-2">
+            {% if post.id in liked %}
+              <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
+            {% else %}
+              <i class="bi bi-heart text-black me-1 btn-round-sm font-lg"></i> 
+            {% endif%}
+            {{ post.likes_count }} Like
+          </a>
+          <a href="{% url 'comments' post.id %}" class="d-flex align-items-center fw-600 
+            text-grey-900 lh-26 font-xssss">
+            <i class="bi bi-chat text-dark text-grey-900 btn-round-sm font-lg"></i>
+            <span>{{ post.comments_count }} Comments</span>
+          </a>
+          <a href="#" class="ms-auto d-flex align-items-center 
+            fw-600 text-grey-900 lh-26 font-xssss">
+            <i class="bi bi-share text-grey-900 text-dark btn-round-sm font-lg"></i>
+            <span>Share</span>
+          </a>
+        </div>
       </div>
-      <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
-        Show More
-      </span>
+    {% endfor %}
+  {% else %}
+    <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
+      <div class="card-body p-0 d-flex">
+        <div class="w-100 d-flex flex-column justify-content-center align-items-center">
+          <span class="font-xl">No Posts</span>
+          <span class="font-xs text-grey-500">Start following people to see their post</span>
+        </div>
+      </div>
     </div>
-    
-    <div class="card-body d-flex p-0">
-      <a href="{% url 'post-like' post.pk%}" class="d-flex align-items-center fw-600 
-        text-grey-900 lh-26 font-xssss me-2">
-        {% if post.id in liked %}
-          <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
-        {% else %}
-          <i class="bi bi-heart text-black me-1 btn-round-sm font-lg"></i> 
-        {% endif%}
-        {{ post.likes_count }} Like
-      </a>
-      <a href="{% url 'comments' post.id %}" class="d-flex align-items-center fw-600 
-        text-grey-900 lh-26 font-xssss">
-        <i class="bi bi-chat text-dark text-grey-900 btn-round-sm font-lg"></i>
-        <span>{{ post.comments_count }} Comments</span>
-      </a>
-      <a href="#" class="ms-auto d-flex align-items-center 
-        fw-600 text-grey-900 lh-26 font-xssss">
-        <i class="bi bi-share text-grey-900 text-dark btn-round-sm font-lg"></i>
-        <span>Share</span>
-      </a>
-    </div>
-  </div>
-  {% endfor %}
+  {% endif %}
 </div>
 {% endblock %}
