--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -1,7 +1,11 @@
 {% extends 'blog/_base.html'%}
 {% load static %}
 {% block content%}
-<!-- MODAL -->
+<!-- FOLLOWERS AND FOLLOWING MODAL -->
+{% include 'blog/profile_followers_and_following_modal.html' %}
+<!-- ENDMODAL -->
+
+<!-- DELETE MODAL -->
 {% include 'blog/modal_delete.html' %}
 <!-- ENDMODAL -->
 <div class="container">
@@ -44,24 +48,32 @@
                   {{posts.count}}
                 </span>
                 <span>
-                  Posts
+                  {% if posts.count == 1 %}
+                    Post
+                  {% else %}
+                    Posts
+                  {% endif %}
                 </span>
               </div>
               <div class="d-flex flex-row align-items-center me-2 p-1 bg-greylight rounded">
-                <a class="text-dark" href="{% url 'profile-followers' search_user.username %}">
+                <button class="btn p-1 text-dark border-0" id="followersModalButton" data-bs-toggle="modal" data-bs-target="#followersModal">
                   <span class="fw-600">
                     {{followers.count}}
                   </span>
-                  Followers
-                </a>
+                    {% if followers.count == 1 %}
+                      Follower
+                    {% else %}
+                      Followers
+                    {% endif %}
+                </button>
               </div>
               <div class="d-flex flex-row align-items-center me-2 py-1 px-2 bg-greylight rounded">
-                <a class="text-dark" href="{% url 'profile-following' search_user.username %}">
+                <button class="btn p-1 text-dark border-0" id="followingModalButton" data-bs-toggle="modal" data-bs-target="#followersModal">
                   <span class="fw-600">
                     {{following.count}}
                   </span>
                   Following
-                </a>
+                </button>
               </div>
             </div>
             {% if request.user.username != search_user.username %}
@@ -116,120 +128,187 @@
   <div class="card w-100 shadow-xss rounded-xxl border-0 px-lg-4 p-2 my-2">
     <div class="card-body mb-3 d-flex flex-column justify-content-center position-relative">
       <div class="text-center mb-1">
-        <button type="button" id="showPosts" class="btn font-lg b-0 border-bottom-dark">Posts</button>
-        <button type="button" id="showTexts" class="btn font-lg b-0">Texts</button>
+        <button type="button" id="showPosts" class="btn font-lg rounded-0 border-top-0 border-end-0 border-start-0 border-bottom-1 border-dark">Posts</button>
+        <button type="button" id="showTexts" class="btn font-lg rounded-0 border-top-0 border-end-0 border-start-0">Writings</button>
         <hr class="mt-0">
       </div>
       <div id="postsContainer" class="container p-0">
-        <div class="row g-1 mb-1">
-          {% for post in img_posts %}
-            <div class="col-4">
-              <div class="ratio ratio-1x1">
-                <a href="{% url 'comments' post.id %}">
-                  {% if post.img %}
-                    <img class="img-fluid w-100 h-100" src="{{ post.img.url }}" alt="{{ post.title }}" style="object-fit: cover;">
-                  {% else %}
-                    <div class="d-flex justify-content-center align-items-center h-100">
-                      <span>No Image Available</span>
-                    </div>
-                  {% endif %}
-                </a>
+        {% if img_posts %}
+          <div class="row g-1 mb-1">
+            {% for post in img_posts %}
+              <div class="col-4">
+                <div class="ratio ratio-1x1">
+                  <a href="{% url 'comments' post.id %}">
+                    {% if post.img %}
+                      <img class="img-fluid w-100 h-100" src="{{ post.img.url }}" alt="{{ post.title }}" style="object-fit: cover;">
+                    {% else %}
+                      <div class="d-flex justify-content-center align-items-center h-100">
+                        <span>No Image Available</span>
+                      </div>
+                    {% endif %}
+                  </a>
+                </div>
               </div>
-            </div>
-
-            {% if forloop.counter|divisibleby:3 and not forloop.last %}
-              </div><div class="row g-1 mb-1">
-            {% endif %}
-          {% endfor %}
-        </div> 
+  
+              {% if forloop.counter|divisibleby:3 and not forloop.last %}
+                </div><div class="row g-1 mb-1">
+              {% endif %}
+            {% endfor %}
+          </div>
+        {% else %}
+        <div class="mt-5 p-1 d-flex flex-column align-items-center justify-content-center">
+          <div class="d-flex flex-column align-items-center justify-content-center border border-2 border-dark rounded-circle w-h-100">
+            <i class="bi bi-camera-fill font-xxxl"></i>
+          </div>
+          <span class="text-center font-xl mt-2">No Posts Yet</span>
+        </div>
+        {% endif %}
       </div>
       <div id="textsContainer" class="d-none">
-        {% for post in txt_posts %}
-          <div class="card w-100 rounded-xxl border-1 p-4 mb-3">
-            <div class="card-body p-0 d-flex">
-              <figure class="avatar me-3">
-                {% if post.owner.profile.profile_picture %}
-                  <img src="{{ post.owner.profile.profile_picture.url }}"
-                    class="shadow-sm rounded-circle img-45"
-                    alt="{{ search_user.username }} Profile Picture" 
-                    width="26" height="26">
-                {% else %}
-                  <img src="{% static 'blog/default.jpg' %}"
-                    class="shadow-sm rounded-circle img-45"
-                    alt="{{ search_user.username }}" 
-                    width="26px" height="26px">
-                {% endif %}
-              </figure>
-              <h4 class="fw-700 text-grey-900 font-xsss mt-1">
-                <a class="text-dark" href="{% url 'user-profile' post.owner.username %}">
-                  {{post.owner}}
-                </a>
-                <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500 text-nowrap">
-                  {{ post.posted_date|timesince }} ago
-                </span>
-              </h4>
-              {% if request.user == search_user %}
-                <div class="w-100 d-flex justify-content-end">
-                  <div class="dropdown">
-                    <a class="d-flex align-items-center" 
-                      href="#" role="button" data-bs-toggle="dropdown"
-                      aria-expanded="false">
-                      <i class="bi bi-three-dots text-dark font-sm"></i>
-                    </a>
-                    <ul class="dropdown-menu p-0">
-                      <a class="btn w-100 text-start text-success"
-                        href="{% url 'post-update' post.id %}">
-                        Edit Post
+        {% if txt_posts %}
+          {% for post in txt_posts %}
+            <div class="card w-100 rounded-xxl border-1 p-4 mb-3">
+              <div class="card-body p-0 d-flex">
+                <figure class="avatar me-3">
+                  {% if post.owner.profile.profile_picture %}
+                    <img src="{{ post.owner.profile.profile_picture.url }}"
+                      class="shadow-sm rounded-circle img-45"
+                      alt="{{ search_user.username }} Profile Picture" 
+                      width="26" height="26">
+                  {% else %}
+                    <img src="{% static 'blog/default.jpg' %}"
+                      class="shadow-sm rounded-circle img-45"
+                      alt="{{ search_user.username }}" 
+                      width="26px" height="26px">
+                  {% endif %}
+                </figure>
+                <h4 class="fw-700 text-grey-900 font-xsss mt-1">
+                  <a class="text-dark" href="{% url 'user-profile' post.owner.username %}">
+                    {{post.owner}}
+                  </a>
+                  <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500 text-nowrap">
+                    {{ post.posted_date|timesince }} ago
+                  </span>
+                </h4>
+                {% if request.user == search_user %}
+                  <div class="w-100 d-flex justify-content-end">
+                    <div class="dropdown">
+                      <a class="d-flex align-items-center" 
+                        href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <i class="bi bi-three-dots text-dark font-sm"></i>
                       </a>
-                      <hr class="m-0">
-                      <a class="btn w-100 text-start text-danger deletePost"
-                        data-bs-toggle="modal" 
-                        data-bs-target="#deleteModal"
-                        data-post-id="{{ post.id }}">
-                        Delete Post
-                      </a>
-                    </ul>
+                      <ul class="dropdown-menu p-0">
+                        <a class="btn w-100 text-start text-success"
+                          href="{% url 'post-update' post.id %}">
+                          Edit Post
+                        </a>
+                        <hr class="m-0">
+                        <a class="btn w-100 text-start text-danger deletePost"
+                          data-bs-toggle="modal" 
+                          data-bs-target="#deleteModal"
+                          data-post-id="{{ post.id }}">
+                          Delete Post
+                        </a>
+                      </ul>
+                    </div>
                   </div>
-                </div>
-              {% endif %}
-            </div>
-  
-            <div class="card-body p-0 me-lg-5 d-flex flex-column">
-              <div class="see-more-container">
-                <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
-                <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
-                <!--  -->
+                {% endif %}
               </div>
-              <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
-                Show More
-              </span>
+    
+              <div class="card-body p-0 me-lg-5 d-flex flex-column">
+                <div class="see-more-container">
+                  <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
+                  <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
+                  <!--  -->
+                </div>
+                <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
+                  Show More
+                </span>
+              </div>
+    
+              <div class="card-body d-flex p-0">
+                <a href="{% url 'post-like' post.pk%}" class="d-flex align-items-center fw-600 
+                  text-grey-900 lh-26 font-xssss me-2">
+                  {% if post.id in liked %}
+                    <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
+                  {% else %}
+                    <i class="bi bi-heart text-black me-1 btn-round-sm font-lg"></i> 
+                  {% endif%}
+                  {{ post.likes_count }} Like
+                </a>
+                <a href="{% url 'comments' post.id %}" class="d-flex align-items-center fw-600 
+                  text-grey-900 lh-26 font-xssss">
+                  <i class="bi bi-chat text-dark text-grey-900 btn-round-sm font-lg"></i>
+                  <span>{{ post.comments_count }} Comments</span>
+                </a>
+                <a href="#" class="ms-auto d-flex align-items-center 
+                  fw-600 text-grey-900 lh-26 font-xssss">
+                  <i class="bi bi-share text-grey-900 text-dark btn-round-sm font-lg"></i>
+                  <span>Share</span>
+                </a>
+              </div>
             </div>
-  
-            <div class="card-body d-flex p-0">
-              <a href="{% url 'post-like' post.pk%}" class="d-flex align-items-center fw-600 
-                text-grey-900 lh-26 font-xssss me-2">
-                {% if post.id in liked %}
-                  <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
-                {% else %}
-                  <i class="bi bi-heart text-black me-1 btn-round-sm font-lg"></i> 
-                {% endif%}
-                {{ post.likes_count }} Like
-              </a>
-              <a href="{% url 'comments' post.id %}" class="d-flex align-items-center fw-600 
-                text-grey-900 lh-26 font-xssss">
-                <i class="bi bi-chat text-dark text-grey-900 btn-round-sm font-lg"></i>
-                <span>{{ post.comments_count }} Comments</span>
-              </a>
-              <a href="#" class="ms-auto d-flex align-items-center 
-                fw-600 text-grey-900 lh-26 font-xssss">
-                <i class="bi bi-share text-grey-900 text-dark btn-round-sm font-lg"></i>
-                <span>Share</span>
-              </a>
+          {% endfor %}
+        {% else %}
+          <div class="mt-5 p-1 d-flex flex-column align-items-center justify-content-center">
+            <div class="d-flex flex-column align-items-center justify-content-center border border-2 border-dark rounded-circle w-h-100">
+              <i class="bi bi-pencil-fill font-xxxl"></i>
             </div>
+            <span class="text-center font-xl mt-2">No Writings Yet</span>
           </div>
-        {% endfor %}
+        {% endif %}
       </div>
     </div>
   </div>
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    // Function to update the delete link in the modal
+    let deleteModal = document.getElementById('deleteModal');
+    deleteModal.addEventListener('show.bs.modal', (event) => {
+      const deleteText = document.getElementById('deleteText');
+      let triggerElement = event.relatedTarget;
+      if (triggerElement.classList.contains('deletePost')) {
+        let postId = triggerElement.getAttribute('data-post-id');
+        deleteText.textContent = 'Are you sure that you want to delete this post?';
+        // Update the modal's delete link with the comment ID
+        let deleteForm = deleteModal.querySelector('#delete-form');
+        deleteForm.action = "{% url 'post-delete' 0 %}".replace('/0/', '/' + postId + '/');
+      }
+    });
+
+    //SHOW FOLLOWERS OR FOLLOWING
+    const followersButton = document.getElementById('followersButton');
+    const followingButton = document.getElementById('followingButton');
+    const followersModalButton = document.getElementById('followersModalButton');
+    const followingModalButton = document.getElementById('followingModalButton');
+    const followersContainer = document.getElementById('followersContainer');
+    const followingContainer = document.getElementById('followingContainer');
+
+    function ShowOrHideContainers(clickedButton, secondButton, showContainer, hideContainer) {
+      clickedButton.classList.add('border-bottom-1', 'border-dark')
+      secondButton.classList.remove('border-bottom-1', 'border-dark')
+      showContainer.style.setProperty('display', 'block', 'important');
+      hideContainer.style.setProperty('display', 'none', 'important');
+    }
+    if (followersButton || followingContainer) {
+      followersButton.addEventListener('click', () => {
+        ShowOrHideContainers(followersButton, followingButton, followersContainer, followingContainer);
+      });
+      followingButton.addEventListener('click', () => {
+        ShowOrHideContainers(followingButton, followersButton, followingContainer, followersContainer);
+      });
+    };
+    
+    if(followersModalButton || followingModalButton) {
+      followersModalButton.addEventListener('click', () => {
+        ShowOrHideContainers(followersButton, followingButton, followersContainer, followingContainer);
+      });
+      followingModalButton.addEventListener('click', () => {
+        ShowOrHideContainers(followingButton, followersButton, followingContainer, followersContainer);
+      });
+    };
+  });
+</script>
 {% endblock %}
