--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -33,7 +33,7 @@
                                 <div class="col-md-10 offset-md-1">
                                 <div class="form-group">
                                   <label class="small mb-1" for="id_email">Email</label>
-                                    <input type="email" name="email"  class="form-control form-control-margin"
+                                    <input type="email" name="email"  class="form-control mb-2"
                                            autocomplete="email" maxlength="254" required id="id_email"
                                            placeholder="Enter email">
                                 </div>
