--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -8,12 +8,12 @@
         {% csrf_token %}
         <span class=" font-xssss fw-600 text-grey-500 p-0 d-flex 
           align-items-center bg-transparent border-0">
-          <i class="bi bi-pencil btn-round-sm font-sm text-primary me-2 bg-greylight"></i>
+          <i class="bi bi-pencil btn-round-sm font-sm text-success me-2 bg-greylight"></i>
           Quick Text
         </span>
         <button type="submit"
           class="btn p-1">
-          <i class="bi bi-send-fill btn-round-sm font-md text-primary"></i>
+          <i class="bi bi-send-fill btn-round-sm font-md text-success"></i>
         </button>
       </div>
       <div class="card-body p-0 mt-3 position-relative">
