--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -125,7 +125,7 @@
               </figure>
               
               <div class="d-flex flex-column w-100">
-                <h4 class="fw-700 text-grey-900 font-xsss">
+                <span class="fw-700 text-grey-900 font-xsss mb-1">
                   <a class="text-dark" 
                     href="{% url 'user-profile' post.owner.username %}">
                     {{comment.user.username}}
@@ -133,7 +133,7 @@
                   <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
                     - {{ comment.posted_date|timesince }} ago
                   </span>
-                </h4>
+                </span>
                 
                 <div class="see-more-container">
                   <span class="w-100 mb-1 text-wrap text-description">{{ comment.text|linebreaksbr }}</span>
@@ -143,15 +143,16 @@
                 </span>
 
                 
-                <div class="d-flex">
-                  <form action="{% url 'reply' post.id comment.id%}" method="GET" 
-                    class="form-container me-2 d-flex align-items-center">
-                    {% csrf_token %}
-                    <button class="m-0 p-0 btn text-success"
-                      type="submit">Reply</button>
-                  </form>
+                <div class="d-flex d-flex align-items-center">
+                  <button 
+                    class="me-2 p-0 btn text-success border-0 show-reply-form"
+                    type="submit"
+                    data-comment-id="{{ comment.id }}"
+                    data-comment-username="{{ comment.user.username }}">
+                    Reply
+                  </button>
                   {% if request.user == comment.user or request.user == comment.post.owner%}
-                  <a class="me-2 p-0 btn text-danger deleteComment"
+                  <a class="me-2 p-0 btn text-danger border-0 deleteComment"
                     data-bs-toggle="modal" 
                     data-bs-target="#deleteModal"
                     data-comment-id="{{ comment.id }}">
@@ -175,7 +176,6 @@
                 <span class="font-xssss">{{ comment.likes_count }}</span>
               </div>
             </div>
-            
             <!-- REPLIES -->
             <div class="mt-3 ms-6">
               {% if comment.get_replies %}
@@ -248,9 +248,9 @@
           </div>
         {% endif %}
       {% endfor %}
-
-    <!-- ADD COMMENT -->
-      <div class="w-100 p-3 sticky-bottom rounded-xxl bg-greylight bottom-5">
+      <!-- ADD COMMENT -->
+      <div id="comment-form-container" 
+        class="w-100 p-3 sticky-bottom rounded-xxl bg-greylight bottom-5">
         <form action="{% url 'comments' post.id %}" 
           method="POST"
           class="d-flex flex-row align-items-center mt-2">
@@ -266,10 +266,51 @@
             style="resize:none;"></textarea>
           <button type="submit"
             class="btn btn-success">
-            Post
+            <i class="bi bi-send-fill"></i>
           </button>
         </form>
       </div>
+      <!-- END ADD COMMENT -->
+      <!-- ADD REPLY -->
+      <div 
+        id="reply-form-container"
+        class="d-none mt-2 w-100 p-3 rounded-xxl bg-greylight bottom-5 sticky-bottom">
+        <form action="#" 
+          id="reply-form"
+          method="POST"
+          class="d-flex flex-column justify-content-center">
+          {% csrf_token %}
+          <div class="d-flex flex-row justify-content-between align-items-center mb-2">
+            <span class="font-xxxxs text-center ms-auto">
+              <i class="bi bi-reply-fill font-sm"></i>
+              Replying to 
+              <span id="replying-to-username" class="text-success"></span>
+            </span>
+            <button 
+              type="button" 
+              class="btn btn-outline-secondary border-0 ms-auto"
+              id="hide-reply-form">
+                <i class="bi bi-x-lg font-xs"></i>
+            </button>
+          </div>
+          <div class="d-flex flex-row align-items-center">
+            <span class="me-1 fw-700">
+              {{request.user.username}}
+            </span>
+            <textarea 
+              type="text" 
+              name="text" 
+              rows="1" 
+              class="form-control me-1"
+              style="resize:none;"></textarea>
+            <button type="submit"
+              class="btn btn-success">
+              <i class="bi bi-send-fill"></i>
+            </button>
+          </div>
+        </form>
+      </div>
+      <!-- END ADD REPLY -->
     </div>
   </div>
 </div>
@@ -298,6 +339,37 @@
         deleteForm.action = "{% url 'post-delete' post.id %}";
       }
     });
+
+    // SHOW REPLY FORM
+    const showReplyFormButton = document.querySelectorAll('.show-reply-form');
+    const hideReplyFormButton = document.getElementById('hide-reply-form');
+    const replyContainer = document.getElementById('reply-form-container');
+    const commentContainer = document.getElementById('comment-form-container');
+    const replyForm = document.getElementById('reply-form');
+    const replyingToUsername = document.getElementById('replying-to-username');
+
+    function ShowOrHideContainers(button, showContainer, hideContainer) {
+      button.addEventListener('click', () =>  {
+        showContainer.style.setProperty('display', 'block', 'important');
+        hideContainer.style.setProperty('display', 'none', 'important');
+      });
+    }
+
+    showReplyFormButton.forEach((button) => {
+      ShowOrHideContainers(button, replyContainer, commentContainer);
+      button.addEventListener('click', () => {
+
+        let commentId = button.getAttribute('data-comment-id');
+        let username = button.getAttribute('data-comment-username');
+
+        let baseReplyUrl = "{% url 'reply' post.id 0 %}"; 
+        replyForm.action = baseReplyUrl.replace('/0/', '/' + commentId + '/');
+
+        replyingToUsername.textContent = username;
+      });
+    });
+
+    ShowOrHideContainers(hideReplyFormButton, commentContainer, replyContainer);
   });
 </script>
 {% endblock %}
