--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -10,9 +10,18 @@
         <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-md-8 col-lg-6" style="max-width:500px;">
                 <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
-                    <div class="card-header justify-content-center">
+                    <div class="card-header">
                         <div id="error_div"></div>
-                      <h3 class="font-weight-light my-4 text-center">Reset Password</h3>
+                        <div class="d-flex flex-row justify-content-center align-items-center">
+                            {% if request.user.is_authenticated %}
+                                <button 
+                                    id="goBack"
+                                    class="btn p-1 font-sm border-0 me-2">
+                                    <i class="bi bi-arrow-left-circle-fill"></i>
+                                </button>
+                            {% endif %}
+                            <h3>Reset Password</h3>
+                        </div>
                     </div>
                     {% if form.errors %}
                         <div class="alert alert-danger alert-dismissible" role="alert">
@@ -49,12 +58,14 @@
                            </div>
                         </form>
                     </div>
-                    <div class="card-footer text-center">
-                        <div class="small">
-                            <a href="{% url 'signup' %}">Create A New Account</a><br><br>
-                            <a href="{% url 'login' %}">Back To Login</a><br>
+                    {% if not request.user.is_authenticated %}
+                        <div class="card-footer text-center">
+                            <div class="small d-flex flex-column">
+                                <a href="{% url 'signup' %}">Create A New Account</a>
+                                <a href="{% url 'new_login' %}">Back To Login</a>
+                            </div>
                         </div>
-                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
