--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -263,7 +263,7 @@
             name="text" 
             rows="1" 
             class="form-control me-1"
-            style="resize:none;"></textarea>
+            style="max-height:75px;"></textarea>
           <button type="submit"
             class="btn btn-success">
             <i class="bi bi-send-fill"></i>
