--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -43,7 +43,7 @@
           <textarea type="text" 
             class="form-control border-dark" 
             name="description" 
-            placeholder="Description"></textarea>
+            placeholder="Description" style='max-height:250px;'></textarea>
         </div>
         <div class="card-body p-0 me-lg-5">
           <input type="hidden" name="timezone" id="user-timezone" value="">
