--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -61,8 +61,12 @@
                     {% if not request.user.is_authenticated %}
                         <div class="card-footer text-center">
                             <div class="small d-flex flex-column">
-                                <a href="{% url 'signup' %}">Create A New Account</a>
-                                <a href="{% url 'new_login' %}">Back To Login</a>
+                                <div>
+                                    <a class="btn text-primary p-0 border-0 " href="{% url 'signup' %}">Create A New Account</a>
+                                </div>
+                                <div>
+                                    <a class="btn text-primary p-0 border-0" href="{% url 'new_login' %}">Back To Login</a>
+                                </div>
                             </div>
                         </div>
                     {% endif %}
