--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -2,8 +2,8 @@
 {% load static %}
 <title>{% block title %}FaceBlog | Create Post{% endblock %}</title>
 {% block content%}
-<div class="container">
-  <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 my-3">
+<div class="container d-flex justify-content-center">
+  <div class="card col col-lg-10 shadow-xss rounded-xxl border-0 p-4 my-3">
     <div class="card-body p-0 mb-3 d-flex justify-content-center">
       <h2>Create New Post</h2>
     </div>
@@ -29,7 +29,7 @@
             name="img"
             accept="image/*">
           <label for="imageInput"
-            class="text-grey-500 opacity-50 position-absolute d-flex align-items-center justify-content-center w-100 h-100" 
+            class="text-grey-500 opacity-50 position-absolute d-flex align-items-center justify-content-center w-100 h-100 text-center" 
             style="cursor:pointer; font-size: 8vw;">
             UPLOAD IMAGE
           </label>
