--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -1,5 +1,6 @@
 {% extends 'blog/_base.html'%}
 {% load static %}
+{% load form_tags %}
 {% block content%}
 <!-- FOLLOWERS AND FOLLOWING MODAL -->
 {% include 'blog/profile_followers_and_following_modal.html' %}
@@ -189,7 +190,7 @@
                     {{post.owner}}
                   </a>
                   <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500 text-nowrap">
-                    {{ post.posted_date|timesince }} ago
+                    {{ post.posted_date|time_filter }}
                   </span>
                 </h4>
                 {% if request.user == search_user %}
