--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -57,6 +57,10 @@ a {
   color: #212529 !important;
 }
 
+.font-xsssss {
+  font-size: 10px !important;
+}
+
 .font-xssss {
   font-size: 12px !important;
 }
@@ -119,16 +123,12 @@ a {
   text-align: center;
 }
 
-.bg-primary-gradiant {
-  background: linear-gradient(135deg, #05f, #09f) !important;
-}
-
 .color-red {
   color: red;
 }
 
 .bg-greylight {
-  background-color: #f5f5f5 !important;
+    background-color: #ececec;
 }
 
 .shadow-xss {
