--- a/blog/templates/blog/_base.html
+++ b/blog/templates/blog/_base.html
@@ -106,7 +106,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center" 
-                    href="#" role="button">
+                    href="{% url 'notifications' %}" role="button">
                     <i class="bi bi-bell text-success font-sm"></i>
                     <span class="ms-1">Notifications</span>
                   </a>
